# rurico

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  renovate.json
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  label-from-issue.yml  zizmor.yml
adr/: 0001-typed-fts-query-contract.md  0002-gpu-side-pooling-embed.md  0003-evaluation-methodology.md  0004-retrieval-and-rerank-pipeline-contract-for-rurico.md  0006-eval-harness-migration-to-amici.md  README.md
crates/rurico-ffi/: Cargo.toml
crates/rurico-ffi/src/: lib.rs  mlx.rs  storage.rs
docs/: THREAT_MODEL.md  errors.md
docs/audit/: 2026-05-14-adr-drift-rerun.md  2026-05-14-adr-drift.md  2026-05-14-undocumented-decisions.md  2026-06-24-020141-adr-gaps.md  2026-06-24-021959-adr-drift.md
docs/benchmarks/: phase1_baseline.md  phase2_result.md  phase3_result.md
docs/decisions/: 0001-typed-fts-query-contract.md  0002-gpu-side-pooling-embed.md  0003-evaluation-methodology.md  0004-retrieval-and-rerank-pipeline-contract-for-rurico.md  0005-prefix-ensemble-experiment-not-adopted.md  0006-eval-harness-migration-to-amici.md  0007-library-logging-boundary.md  0008-adopt-process-level-sqlite-vec-auto-extension.md  0009-adopt-bucketbounds-as-cross-module-forward-pass-invariant.md  0010-adopt-maskfill-constant-to-avoid-metal-kernel-nan.md  0011-adopt-uniform-vector-length-contract-for-the-embed-trait.md  0012-adopt-symmetric-phase-5-query-normalization.md  0013-adopt-subprocess-probe-exit-code-ipc-wire-format-contract.md  0014-adopt-mlx-only-embedding-backend-and-retire-the-candle-fallback.md  README.md
docs/eval/: baseline.md
src/: artifacts.rs  coverage_probe.rs  dispatch.rs  embed.rs  eval.rs  lib.rs  mlx_cache.rs  model_init.rs  model_io.rs  model_lifecycle.rs  model_probe.rs  modernbert.rs  reranker.rs  retrieval.rs  sandbox.rs  storage.rs  test_support.rs  text.rs
src/artifacts/: tests.rs
src/dispatch/: tests.rs
src/embed/: candle.rs  embedder.rs  fixtures.rs  linreg.rs  metrics.rs  mlx.rs  mod.rs  pooling.rs  probe.rs  test_support.rs  tests.rs  workloads.rs
src/embed/fixtures/: tests.rs
src/embed/linreg/: tests.rs
src/embed/metrics/: tests.rs
src/embed/mlx/: tests.rs
src/embed/pooling/: tests.rs
src/embed/workloads/: tests.rs
src/eval/: baseline.rs  fixture.rs  metrics.rs  pipeline.rs
src/model_init/: tests.rs
src/model_io/: hf_backend.rs  tests.rs
src/model_lifecycle/: tests.rs
src/model_probe/: tests.rs
src/modernbert/: config.rs  mod.rs  model.rs
src/modernbert/config/: tests.rs
src/modernbert/model/: tests.rs
src/reranker/: lazy.rs  mlx.rs  mod.rs  test_support.rs  tests.rs
src/reranker/lazy/: tests.rs
src/retrieval/: tests.rs
src/sandbox/: tests.rs
src/storage/: mod.rs  query_normalize.rs  search.rs  tests.rs
src/storage/query_normalize/: tests.rs
src/storage/search/: tests.rs
src/text/: tests.rs
tests/: eval_smoke.rs  gpu_pool_probe.rs  mlx_smoke.rs  visibility.rs
tests/fixtures/eval/: LICENSES.md  baseline.json  documents.jsonl  known_answers.jsonl  queries.jsonl  reverse_baseline.json
tests/ui/: chunked_embedding_new_unchecked_private.rs  chunked_embedding_new_unchecked_private.stderr  chunked_embedding_private_construction.rs  chunked_embedding_private_construction.stderr  from_paths_pub_crate.rs  from_paths_pub_crate.stderr
