[workspace]
members = [".", "crates/rurico-ffi"]

[package]
name = "rurico"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "Shared embedding, reranking, and storage utilities for semantic search CLIs"
license = "MIT"
repository = "https://github.com/thkt/rurico"
publish = false
exclude = [".claude/", ".yomu/", "workspace/"]

[features]
test-mlx = []
test-support = []

[dependencies]
bytemuck = "1"
hf-hub = "0.5"
log = "0.4"
mlx-rs = "0.25"
rusqlite = { version = "0.39", features = ["bundled"] }
rurico-ffi = { path = "crates/rurico-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
