[workspace]
members = [".", "crates/rurico-ffi"]

[package]
name = "rurico"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "Shared embedding, reranking, and storage utilities for semantic search CLIs"
license = "MIT"
repository = "https://github.com/thkt/rurico"
publish = false
exclude = [".claude/", ".yomu/", "workspace/"]

[features]
test-mlx = []
test-support = []
# Gate the `mlx_smoke` binary and its integration test behind a feature so
# `tracing-subscriber` does not enter downstream library users' dependency
# graph. Enable with `cargo build/run/test --features smoke`.
smoke = ["dep:tracing-subscriber"]

[[bin]]
name = "mlx_smoke"
required-features = ["smoke"]

[[test]]
name = "mlx_smoke"
required-features = ["smoke"]

[dependencies]
bytemuck = "1"
hf-hub = "0.5"
mlx-rs = "0.25"
rand = "0.10"
rand_chacha = "0.10"
rusqlite = { version = "0.39", features = ["bundled"] }
rurico-ffi = { path = "crates/rurico-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
unicode-normalization = "0.1"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tracing-test = "0.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
